cleaned up the mail message

--- a/app/views/message_mailer/message_confirmation.text.erb
+++ b/app/views/message_mailer/message_confirmation.text.erb
@@ -1,1 +1,9 @@
-We can say anything we want in here!
+Email från Amon Revision ABs websida
+
+Från: <%= @namn %> (<%= @email %>)
+
+Company: <%= @company %>
+
+Phone: <%= @phone %>
+
+Message: <%= @message %>
