--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -4,6 +4,6 @@
   <%= f.input :subtitle %>
   <%= f.input :position %>
   <%= f.input :content %>
-  <%= f.submit t(:create), :class => :submit %>
+  <%= f.submit button_label, :class => :submit %>
 <% end %>
 
