--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,6 +1,6 @@
 <% title "Edit Page" %>
 
-<%= render 'form' %>
+<%= render 'form', :button_label => t(:update) %>
 
 <p>
   <%= link_to "Show", @page %> |
