--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -1,5 +1,5 @@
 <% titled new(:page) %>
 
-<%= render 'form' %>
+<%= render 'form', :button_label => t(:create) %>
 
 <p><%= link_to "Back to List", pages_path %></p>
